# lidar_camera_projection

./: CMakeLists.txt  LICENSE  README.md  package.xml  readme.md
config/: initial_params.txt  params.yaml  params_nuscenes.yaml
include/lidar_camera_projection/: algorithm.h  pointcloud_process.h  project.h  projector.h  settings.h
launch/: project.launch  project_nuscenes.launch
src/: algorithm.cpp  pointcloud_process.cpp  project.cpp  projector.cpp
