<?xml version="1.0"?>
<package format="2">
  <name>lidar_camera_projection</name>
  <version>0.0.0</version>
  <description>The lidar_camera_projection package</description>
  <maintainer email="remnant_cloude@qq.com">root</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>yolov5_ros_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>